[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphver"
version = "0.1.0"
description = "Alembic-style migration tool for Neo4j — the only Python tool with rollback support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Healiom", email = "eng@healiom.com" },
]
keywords = ["neo4j", "migrations", "graph", "database", "versioning", "alembic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "neo4j>=5.0",
    "click>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "testcontainers[neo4j]>=3.7",
]

[project.scripts]
graphver = "graphver.runner:main"

[project.urls]
Homepage = "https://github.com/healiom/graphver"
Repository = "https://github.com/healiom/graphver"
Issues = "https://github.com/healiom/graphver/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphver"]
